tests/ui/parser/dyn-trait-compatibility.stderr
error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:3:11
   |
LL | type A0 = dyn;
   |           ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:7:11
   |
LL | type A2 = dyn<dyn, dyn>;
   |           ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:7:15
   |
LL | type A2 = dyn<dyn, dyn>;
   |               ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:7:20
   |
LL | type A2 = dyn<dyn, dyn>;
   |                    ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:11:11
   |
LL | type A3 = dyn<<dyn as dyn>::dyn>;
   |           ^^^ not found in this scope

error[E0405]: cannot find trait `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:11:23
   |
LL | type A3 = dyn<<dyn as dyn>::dyn>;
   |                       ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:11:16
   |
LL | type A3 = dyn<<dyn as dyn>::dyn>;
   |                ^^^ not found in this scope

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `dyn`
  --> $DIR/dyn-trait-compatibility.rs:5:11
   |
LL | type A1 = dyn::dyn;
   |           ^^^ use of unresolved module or unlinked crate `dyn`
   |
   = help: you might be missing a crate named `dyn`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0405, E0412, E0433.
For more information about an error, try `rustc --explain E0405`.
